--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
     function storeVar(v) {
         sessionStorage.setItem('variant', v);
-        window.location.href = "signup.html";
+        window.location.href = "beta.html";
     }
 </script>
 
