--- a/beta.html
+++ b/beta.html
@@ -7,7 +7,7 @@
     <link href='Css/owl.carousel.min.css' rel='stylesheet' type='text/css'>
     <link href='Css/owl.theme.default.min.css' rel='stylesheet' type='text/css'>
     <script src='Script\jquery-3.3.1.min.js'></script>
-    <script src="script/owl.carousel.min.js"></script>
+    <script src="Script\owl.carousel.min.js"></script>
     <link href='Css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link href='Css/beta.css' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
