--- a/beta.html
+++ b/beta.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='Css/owl.carousel.min.css' rel='stylesheet' type='text/css'>
     <link href='Css/owl.theme.default.min.css' rel='stylesheet' type='text/css'>
