--- a/beta.html
+++ b/beta.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='Css/owl.carousel.min.css' rel='stylesheet' type='text/css'>
     <link href='Css/owl.theme.default.min.css' rel='stylesheet' type='text/css'>
@@ -609,6 +608,18 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid conFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                    <button class = "btnNext">Back</button>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                    <button class = "btnNext">Next</button>
+                </div>
             </div>
         </div>
     </div>
